[package]
name = "oxid-gateway-reverse-proxy"
version = "0.0.1"
edition = "2021"

[dependencies]
pingora = { version = "0.4", features = [ "lb", "openssl" ] }
async-trait="0.1"
tonic = "0.12.3"
prost = { version = "0.13.5"}
tokio = {version="1.43.0", features = ["sync"]}
tonic-reflection = "0.12.3"
matchit = "0.8.6"
flume = "0.11.1"
futures = "0.3.31"
tokio-stream = "0.1.17"
uuid = {version = "1.18.1", features = ["v4"]}
reqwest = {version = "0.12.24", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.3"
